# cookiecutter-cmdstanpy-wrapper

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: LICENSE  pyproject.toml  setup.cfg  setup.py
{{ cookiecutter.project_slug }}/.github/workflows/: build-wheels.yaml  main.yaml
{{ cookiecutter.project_slug }}/tests/: test_models.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py
